swagger - documented PostUser
