# restapi/handler.go
@@ -32,8 +32,8 @@ func NewHandler(users *users.Service, projects *projects.Service, swaggerDocs []
 	mux.Get("/swagger/docs.json", h.getSwaggerDocs)
 	mux.Get("/swagger/*", h.getSwaggerWebInterface())
 
-	mux.Get("/users/{id}", h.getUserByID)
-	mux.Post("/users", h.postUser)
+	mux.Get("/users/{id}", h.GetUserByID)
+	mux.Post("/users", h.PostUser)
 
 	mux.Get("/projects", h.getProjectsAll)
 	mux.Post("/projects", h.postProject)
