# restapi/users_endpoints.go
@@ -7,12 +7,12 @@ import (
 )
 
 // @ID GetUserByID
-// @Produce  json
+// @Produce json
 // @Param id path int true "User ID"
 // @Success 200 {object} storage.User
 // @Failure default {object} ResponseError
 // @Router /users/{id} [get]
-func (h *Handler) getUserByID(w http.ResponseWriter, r *http.Request) {
+func (h *Handler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 	id, err := urlParamInt(r, "id")
 	if err != nil {
 		h.resError(w, err)
@@ -26,7 +26,14 @@ func (h *Handler) getUserByID(w http.ResponseWriter, r *http.Request) {
 	h.resData(w, res)
 }
 
-func (h *Handler) postUser(w http.ResponseWriter, r *http.Request) {
+// @ID PostUser
+// @Accept json
+// @Produce json
+// @Param params body storage.UserCreateParams true "User Create Params"
+// @Success 200 {object} storage.CreatedItem
+// @Failure default {object} ResponseError
+// @Router /users [post]
+func (h *Handler) PostUser(w http.ResponseWriter, r *http.Request) {
 	var p storage.UserCreateParams
 	if err := bodyJSON(r, &p); err != nil {
 		h.resError(w, err)
